--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,35 +2,46 @@
 <html>
 <head>
 	<title>kingman Construtora</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-<div id="logo"></div>
-<div id="header-image"><img src=""></div>
-<nav>
-	<a href=""></a>
-	<a href=""></a>
-	<a href=""></a>
-	<a href=""></a>
-</nav>
-<div>
-	<h1>Kingman Construtora</h1>
-	<p id="slogan">A kingman faz melhor</p>
-	<img src="images/DSCN4865.jpg"
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<div id="header">
+	<section id="logo"><img src="images/kingman.jpg"></section>
+	<section id="header-image"><img src=""></section>
 	<ul>
-		<li>construção</li>
-		<li>reabilitação</li>
-		<li>pré-fabricados</li>
-		<li>obra civil</li>
-
+	<li class="active">PT</li>
+	<li><a href="#">EN</a></li>
 	</ul>
+	<nav>
+		<a href="#">Sobre nós</a>
+		<a href="#">O nosso trabalho</a>
+		<a href="#">História</a>
+		<a href="#">Contactos</a>
+	</nav>
 	</div>
-	<footer><p>contact us: <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a></p></footer>
+	<div id="main">
+		<h1>Kingman Construtora</h1>
+		<p id="tagline">soluções • resultados • qualidade</p>
+		<img src="images/DSCN4865.jpg"
+		<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia — Oil & Gas —, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.<br />
+A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa experiência, a estrutura de que dispomos e o nosso know how neste ramo possibilitam-nos ter a capacidade de resposta mais adequada a cada projecto.<br />
+Prestamos um serviço integral desde o desenho de projecto à execução e finalização da obra. A nossa equipa com mais de 150 trabalhadores inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra.
+A segurança é importante para nós, por isso no desempenho da nossa actividade atendemos aos standards da indústria de controlo de qualidade interno, segurança e saúde no trabalho.
+		</p>
+		<ul>
+			<li>construção</li>
+			<li>reabilitação</li>
+			<li>pré-fabricados</li>
+			<li>obra civil</li>
+		</ul>
+	</div>
+	<footer>
+		<p>Address line 1<br />
+		Address line 2<br />
+		Address line 3<br />
+		Phone contact line 1<br />
+		Phone contact line 2<br />
+		Email <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a>
+		</p>
+	</footer>
 </body>
 </html>
