--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
 	<title>kingman Construtora</title>
 </head>
 <body>
-	<div id="header">
-	<section id="logo"><img src="images/kingman.jpg"></section>
-	<section id="header-image"><img src=""></section>
-	<ul>
-	<li class="active">PT</li>
-	<li><a href="#">EN</a></li>
-	</ul>
-	<nav>
-		<a href="#">Sobre nós</a>
-		<a href="#">O nosso trabalho</a>
-		<a href="#">História</a>
-		<a href="#">Contactos</a>
-	</nav>
-	</div>
-	<div id="main">
+	<header>
+		<img src="images/kingman.jpg" alt="kingman logo">
+		<img src="">
+		<div>
+			<ul>
+				<li class="active"><a href="#">PT</a></li>
+				<li><a href="#">EN</a></li>
+			</ul>
+			<nav>
+				<a href="#">Sobre nós</a>
+				<a href="#">O nosso trabalho</a>
+				<a href="#">História</a>
+				<a href="#">Contactos</a>
+			</nav>
+		</div>
+	</header>
+	<main>
 		<h1>Kingman Construtora</h1>
 		<p id="tagline">soluções • resultados • qualidade</p>
-		<img src="images/DSCN4865.jpg"
-		<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia — Oil & Gas —, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.<br />
-A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa experiência, a estrutura de que dispomos e o nosso know how neste ramo possibilitam-nos ter a capacidade de resposta mais adequada a cada projecto.<br />
-Prestamos um serviço integral desde o desenho de projecto à execução e finalização da obra. A nossa equipa com mais de 150 trabalhadores inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra.
-A segurança é importante para nós, por isso no desempenho da nossa actividade atendemos aos standards da indústria de controlo de qualidade interno, segurança e saúde no trabalho.
-		</p>
+		<img src="images/DSCN4865.jpg">
+		<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia — Oil & Gas —, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
+		<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa experiência, a estrutura de que dispomos e o nosso know how neste ramo possibilitam-nos ter a capacidade de resposta mais adequada a cada projecto.</p>
+		<p>Prestamos um serviço integral desde o desenho de projecto à execução e finalização da obra. A nossa equipa com mais de 150 trabalhadores inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra.</p>
+		<p>A segurança é importante para nós, por isso no desempenho da nossa actividade atendemos aos standards da indústria de controlo de qualidade interno, segurança e saúde no trabalho.</p>
 		<ul>
 			<li>construção</li>
 			<li>reabilitação</li>
 			<li>pré-fabricados</li>
 			<li>obra civil</li>
 		</ul>
-	</div>
+	</main>
 	<footer>
-		<p>Address line 1<br />
-		Address line 2<br />
-		Address line 3<br />
-		Phone contact line 1<br />
-		Phone contact line 2<br />
-		Email <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a>
-		</p>
+		<address>Address line 1<br>Address line 2<br>Address line 3</address>
+		<a href="tel:000000000000">0000000000000</a>
+		<p>Email <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a></p>
 	</footer>
 </body>
 </html>
