--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>kingman Construtora</title>
 	<link type="text/css" rel="stylesheet" href="css/style.css">
-	<script src="https://use.typekit.net/tfh1vwr.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 </head>
 <body>
 <!-- <ul>
