--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,42 +6,40 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 </head>
 <body>
-<!-- <ul>
-				<li class="active"><a href="#">PT</a></li>
-				<li><a href="#">EN</a></li>
-			</ul> -->
 	<header>
-		<div id="logo"><img src="images/logo01.gif" alt="kingman logo"></div>
+		<img id="logo" src="images/logo01.gif" alt="kingman logo">
 		<img id="header_img" src="images/IMG_7274.jpg">
-		<div>
-			
-			<nav>
-				<a href="#">Sobre nós</a>
-				<a href="#">O nosso trabalho</a>
-				<a href="#">História</a>
-				<a href="#">Contactos</a>
-			</nav>
-		</div>
+		<nav>
+			<a href="#">Sobre nós</a>
+			<a href="#">O nosso trabalho</a>
+			<a href="#">História</a>
+			<a href="#">Contactos</a>
+		</nav>
 	</header>
 	<main>
-		<h1>Kingman Construtora</h1>
-		<p id="tagline">soluções • resultados • qualidade</p>
-		<section id="intro">
-		<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia — Oil & Gas —, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
-		<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa experiência, a estrutura de que dispomos e o nosso know how neste ramo possibilitam-nos ter a capacidade de resposta mais adequada a cada projecto.</p>
-		<p>Prestamos um serviço integral desde o desenho de projecto à execução e finalização da obra. A nossa equipa com mais de 150 trabalhadores inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra.</p>
-		<p>A segurança é importante para nós, por isso no desempenho da nossa actividade atendemos aos standards da indústria de controlo de qualidade interno, segurança e saúde no trabalho.</p>
+		<section>
+			<h1>Kingman Construtora</h1>
+			<p id="tagline">soluções • resultados • qualidade</p>
 		</section>
-		<section id ="areas">
-			<img src="images/P1080142.jpg"><h3>construção</h3>
-			<img src="images/IMG_1633.jpg"><h3>reabilitação</h3>
-			<img src="images/IMG_20150731_082841a.jpg"><h3>pré-fabricados</h3>
-			<img src="images/DSCN5047.jpg"><h3>obra civil</h3>
-		</sectiom>
+		<section id="intro">
+			<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia — Oil & Gas —, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
+			<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa experiência, a estrutura de que dispomos e o nosso know how neste ramo possibilitam-nos ter a capacidade de resposta mais adequada a cada projecto.</p>
+			<p>Prestamos um serviço integral desde o desenho de projecto à execução e finalização da obra. A nossa equipa com mais de 150 trabalhadores inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra.</p>
+			<p>A segurança é importante para nós, por isso no desempenho da nossa actividade atendemos aos standards da indústria de controlo de qualidade interno, segurança e saúde no trabalho.</p>
+		</section>
+		<section id="areas">
+			<img src="images/P1080142.jpg">
+			<h3>construção</h3>
+			<img src="images/IMG_1633.jpg">
+			<h3>reabilitação</h3>
+			<img src="images/IMG_20150731_082841a.jpg">
+			<h3>pré-fabricados</h3>
+			<img src="images/DSCN5047.jpg">
+			<h3>obra civil</h3>
+		</section>
 	</main>
 	<footer>
-		<address>Rua da Maringanha s/n
-<br>Pemba, Cabo Delgado<br>MOÇAMBIQUE</address>
+		<address>Rua da Maringanha s/n<br>Pemba, Cabo Delgado<br>MOÇAMBIQUE</address>
 		<a href="tel:000000000000">T. +258  20 030 134</a>
 		<a href="tel:000000000000">T. +258  82 052 0896</a>
 		<a href="tel:000000000000">T. +258  86 535 7565</a>
