--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -5,8 +5,6 @@
 	<title>kingman Construtora</title>
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
-	
-
 </head>
 <body>
 	<header class="clearfix">
@@ -69,6 +67,10 @@
 			<p>T. +258  20 030 134</p>
 			<p>T. +258  82 052 0896</p>
 			<p>T. +258  86 535 7565</p>
+		</div>
+		<div class="icons">
+			<a href="#"><img src="images/facebook.png" alt="facebook" target="blank"></a>
+			<a href="#"><img src="images/googleplus.png" alt="google-plus" target="blank"></a>
 		</div>
 		<p id="legal">&copy;2015 Sanlo Mozambique, Lda</p>
 	</footer>
