--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -59,15 +59,17 @@
 			<a href="#">Contactos</a>
 		</nav>
 		<h3>Contactos</h3>
-		<div>
-			<address>Rua da Maringanha s/n<br>Pemba, Cabo Delgado<br>MOÇAMBIQUE</address>
-			<p>E. <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a></p>
-		</div>
-		<div>
-			<p>T. +258  20 030 134</p>
-			<p>T. +258  82 052 0896</p>
-			<p>T. +258  86 535 7565</p>
-		</div>
+		<section class="clearfix">
+			<div>
+				<address>Rua da Maringanha s/n<br>Pemba, Cabo Delgado<br>MOÇAMBIQUE</address>
+				<p>E. <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a></p>
+			</div>
+			<div>
+				<p>T. +258  20 030 134</p>
+				<p>T. +258  82 052 0896</p>
+				<p>T. +258  86 535 7565</p>
+			</div>
+			</section>
 		<div class="icons">
 			<a href="#"><img src="images/facebook.png" alt="facebook" target="blank"></a>
 			<a href="#"><img src="images/googleplus.png" alt="google-plus" target="blank"></a>
