--- a/unit_9/4/index.html
+++ b/unit_9/4/index.html
@@ -15,7 +15,7 @@
 		<div>
 			<nav>
 				<a href="#">Sobre nós</a>
-				<a href="#">o nosso trabalho</a>
+				<a href="projectos.html">o nosso trabalho</a>
 				<a href="#">experiência</a>
 				<a href="#">Contactos</a>
 			</nav>
@@ -25,8 +25,8 @@
 		<h1>soluções, resultados, qualidade</h1>
 		<p>Construção à sua medida</p>
 		<section id="areas" class="clearfix">
-				<img src="images/P1080142.jpg" alt="pateo interior de convento">
-				<img src="images/IMG_1633.jpg" alt="reabilitacao de escritorios">
+				<img src="images/convento_cvr.jpg" alt="pateo interior de convento">
+				<img src="images/tlc_cvr.jpg" alt="reabilitacao de escritorios">
 				<img src="images/IMG_20150731_082841.jpg" alt="casas em pre-fabricado">
 				<img src="images/DSCN5046A.jpg" alt="muro de vedacao">
 		</section>
@@ -44,7 +44,7 @@
 					<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia – Oil & Gas, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
 				</div>
 				<div>
-					<h3><br /><em>Know How</em></h3>
+					<h3><em>Know How</em></h3>
 					<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa equipa inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra, prestando um serviço integral desde o desenho de projecto à execução e finalização da obra.</p>
 				</div>
 			</div>
@@ -65,15 +65,17 @@
 				<p>E. <a href="mailto:info@kingman.co.mz">info@kingman.co.mz</a></p>
 			</div>
 			<div>
-				<p>T. +258  20 030 134</p>
-				<p>T. +258  82 052 0896</p>
-				<p>T. +258  86 535 7565</p>
+				<a href="tel:+25820030134">T. +258  20 030 134</a><br>
+				<a href="tel:+258820520896">T. +258  82 052 0896</a><br>
+				<a href="tel:+258865357565">T. +258  86 535 7565</a><br>
 			</div>
 			</section>
 		<div class="icons">
 			<a href="#"><img src="images/facebook.png" alt="facebook" target="blank"></a>
 			<a href="#"><img src="images/googleplus.png" alt="google-plus" target="blank"></a>
 		</div>
+		
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13768.577736757585!2d40.55582802223031!3d-12.967838396694956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDU4JzAwLjYiUyA0MMKwMzQnMDUuNiJF!5e1!3m2!1sen!2s!4v1463498622943" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 		<p id="legal">&copy;2015 Sanlo Mozambique, Lda</p>
 	</footer>
 	
