--- a/unit_9/4/experiencia.html
+++ b/unit_9/4/experiencia.html
@@ -14,42 +14,35 @@
 		</div>
 		<div>
 			<nav>
-				<a class="active" href="#">Início</a>
+				<a href="index.html">início</a>
 				<a href="sobre.html">Sobre nós</a>
 				<a href="projectos.html">o nosso trabalho</a>
-				<a href="experiencia.html">experiência</a>
+				<a class="active" href="#">experiencia</a>
 			</nav>
 		</div>
 	</header>
 	<main class="clearfix">
-		<h1>soluções, resultados, qualidade</h1>
-		<p>Construção à sua medida</p>
-		<section id="areas" class="clearfix">
-				<img src="images/convento_cvr.jpg" alt="pateo interior de convento">
-				<img src="images/tlc_cvr.jpg" alt="reabilitacao de escritorios">
-				<img src="images/IMG_20150731_082841.jpg" alt="casas em pre-fabricado">
-				<img src="images/DSCN5046A.jpg" alt="muro de vedacao">
-		</section>
-		<section id="intro" class="clearfix">
-			<header>
-				<h2>Construção</h2>
-				<h2>reabilitação</h2>
-				<h2>pré-fabricados</h2>
-				<h2>obra civil</h2>
-				<h2>projecto</h2>
-			</header>
+		<h1>Recursos</h1>
+		<p>Experiência, capacidade e estrutura</p>
+		<section id="experiencia">
 			<div class="clearfix">
-				<div>
-					<h3>Resposta às suas necessidades</h3>
-					<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia – Oil & Gas, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
-				</div>
-				<div>
-					<h3><em>Know How</em></h3>
-					<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa equipa inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra, prestando um serviço integral desde o desenho de projecto à execução e finalização da obra.</p>
+				<img src="images/IMG_0945.jpg" alt="trabalhadores">
+				<img src="images/IMG_5896.jpg" alt="foto de obra">
+				<img src="images/P1080103.jpg" alt="obra acabada, alpendre">
+				<img src="images/P1080060.jpg" alt="detalhe de acabamentos">
+			</div>
+			<div class="txt">
+			<h3>Como fazemos</h3>
+				<div class="txt_2cols">
+					<p>Desde 2012 em Moçambique, a nossa experiência local é comprovada pelas mais de 40 obras realizadas, tal como escolas, capelas, orfanatos, casas de habitação, hotel, escritórios, agências bancárias, pré-fabricados, reabilitações, vedações,&nbsp;etc.</p>
+					<p>
+					Procuramos sempre garantir a qualidade dos serviços que prestamos e o cumprimento dos contratos estabelecidos, ao utilizar materiais de qualidade, tendo em vista assegurar aos nossos clientes a melhor qualidade a um preço justo. Juntamente com as práticas usadas, rapidez e segurança na execução visamos promover sistematicamente a análise de soluções técnicas e económicas que beneficiem cada projecto.</p>
+					<p> A nossa equipa com mais de 150 trabalhadores é composta por uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra que incluem engenheiros, arquitectos, canalizadores, electricistas, pintores, pedreiros, carpinteiros, e equipa de execução de&nbsp;obra.</p>
 				</div>
 			</div>
+			<img id="organigrama" src="images/organigrama.svg" alt="organigrama">
 		</section>
-
+‚		
 	</main>
 	<footer class="clearfix">
 		<nav>
