--- a/unit_9/4/sobre.html
+++ b/unit_9/4/sobre.html
@@ -14,42 +14,116 @@
 		</div>
 		<div>
 			<nav>
-				<a href="#">Sobre nós</a>
+				<a href="index.html">Início</a>
+				<a class="active" href="#">Sobre nós</a>
 				<a href="projectos.html">o nosso trabalho</a>
-				<a href="#">experiência</a>
-				<a href="#">Contactos</a>
+				<a href="experiencia.html">experiência</a>
+				
 			</nav>
 		</div>
 	</header>
 	<main class="clearfix">
-		<h1>soluções, resultados, qualidade</h1>
-		<p>Construção à sua medida</p>
-		<section id="areas" class="clearfix">
-				<img src="images/convento_cvr.jpg" alt="pateo interior de convento">
-				<img src="images/tlc_cvr.jpg" alt="reabilitacao de escritorios">
-				<img src="images/IMG_20150731_082841.jpg" alt="casas em pre-fabricado">
-				<img src="images/DSCN5046A.jpg" alt="muro de vedacao">
+		<h1>Obra realizada</h1>
+		<p>o trabalho da kingman em Mocambique</p>
+		<section id="mapa_obras" class="clearfix">
+			<img src="images/mapa_obras.svg" alt="mapa de obras">
 		</section>
 		<section id="intro" class="clearfix">
 			<header>
-				<h2>Construção</h2>
-				<h2>reabilitação</h2>
-				<h2>pré-fabricados</h2>
-				<h2>obra civil</h2>
-				<h2>projecto</h2>
+				<h2>Resposta integral às&nbsp;suas necessidades na área da construção</h2>
 			</header>
 			<div class="clearfix">
 				<div>
-					<h3>Resposta às suas necessidades</h3>
-					<p>Kingman Construtora sediada em Pemba, Moçambique, desde 2012 trabalha em obras e projectos para diversos clientes nos principais segmentos de mercado, que englobam Instituições Religiosas, Energia – Oil & Gas, Serviços de Logística, Hotelaria, Banca, Educação, Fundos de investimento e particulares.</p>
+					<p>As principais áreas da nossa actividade vão desde a construção convencional à construção em pré-fabricados, incluindo obra industrial e residencial.<br />
+					Somos flexíveis na nossa abordagem para cumprirmos com as necessidades do cliente e procurarmos as soluções que o projecto exige, sejam elas nacionais ou internacionais, tendo em vista o melhor resultado e relação qualidade-custo.</p>
 				</div>
 				<div>
-					<h3><em>Know How</em></h3>
-					<p>A nossa vasta experiência na área conta com mais de 20 anos a exercer esta actividade em Espanha. A nossa equipa inclui uma divisão técnica responsável pela elaboração de novos projectos e uma divisão de execução de obra, prestando um serviço integral desde o desenho de projecto à execução e finalização da obra.</p>
+					<h6>Compromisso Social</h6>
+					<p>Acreditamos em criar um impacto positivo na comunidade que nos rodeia. Por isso investimos os nossos meios, o nosso tempo e capacidade para contribuir seja atendendo às necessidades dos nossos clientes ou apoiando com o nosso trabalho certas causas de associações sem fins lucrativos.</p>
 				</div>
 			</div>
 		</section>
-
+		<section class="proj_list">
+			<h3>Lista de projectos, Moçambique</h3>
+			<div>
+				<ul>
+					<h5>Projectos de Arquitectura</h5>
+					<h6>habitação</h6>
+					<li>Casa, zona Uni Lúrio Projecto</li>
+					<li>Vivenda de 240 m&sup2;, Expansão Projecto</li>
+					<li>Vivenda 90 m&sup2;, Expansão Projecto</li>
+					<li>Urbanização distribuição parcelaria 30 unidades, Chuiba, Ante-projecto</li>
+					<li>Urbanização de 32 casas, Chuiba Ante-projecto</li>
+					<h6>reabilitação/ampliação</h6> 
+					<li>Farmácia Carlos Lwanga Ante-projecto reabilitação
+					<li>Escola primária Paroquia san Carlos Lwanga, Projecto ampliação e reabilitação</li>
+					<li>Colégio 3.500 m&sup2; Ante-projecto, ampliação</li>
+					<li>Escritório Manica Ante-projecto reforma</li>
+					<li>Igreja de Namuno Estudo do estado de conservação e Projecto de reabilitacão</li>
+					<h6>industrial, obra civil</h6>
+					<li>Armazéns 2000 m&sup2; Projecto</li>
+					<li>Muro de vedação Maringanha</li>
+					<h6>estudos de viabilidade</h6> 
+					<li>Estudo de viabilidade e promoção de vivendas Rua marginal</li>
+					<li>Estudo de valorizações de preços de aluguer para edifício emblemático</li>
+					<li>Refeitório, Chiure Ante-projecto</li>
+				</ul>
+				<ul>
+					<h5>Construção/Obra</h5>
+					<h6>residencial</h6>
+					<li>Condominio Wimbe Socoal, Pemba 2015/2016</li>
+					<li>8 Casas Prefabricadas Big baobab, Pemba 2015 </li>
+					<li>2 Orfanatos Sementes da esperança, Pemba 2014 </li>
+					<li>Lar orfanato Sementes da esperança, Pemba 2013</li>
+					<li>Hotel Escola Ibo Sociedade Turistica Venture, Ilha do Ibo 2014/15 </li>
+					<h6>ensino</h6> 
+					<li>Escola Primária Irmas discipulas de Jesus Eucaristico, Pemba 2014/15</li>
+					<h6>religiosa</h6> 
+					<li>Pórtico Igreja Irmas Mercedarias Santisimo Sacramento, Pemba 2015</li>
+					<li>Capela Padres Passionistas, Pemba 2014</li>
+					<li>Residencia, Orfanato, Capela Irmas Mercedarias Santisimo Sacramento, Pemba 2013/2014</li>
+					<h6>industrial</h6> 
+					<li>Pioneer Camp Pemba Energy City, Pemba 2016</li>
+					<li>Armazém Mwiriti, Pemba 2014</li>
+					<h6>hidráulica</h6> 
+					<li>Missao Netia Netia, 2016</li> 
+					<li>Reservatorios de água Irmas Mercedarias de Silva Macua, Silva Macua 2015</li>
+					<h6>obra civil</h6>
+					<li>Muro de vedaçao Cruz Vermelha de de Moçambique, Pemba 2015</li>
+					<li>Muro de vedação Irmas da Congregação Filhas de Jesus, Metoro 2015</li>
+					<li>Arruamento e vala de drenagem particular, Pemba 2015</li>
+					<li>Muro de vedaçao Miwiriti, Pemba 2014</li>
+				</ul>
+				<ul>
+					<h5>reabilitação</h5>
+					<h6>comercial</h6>
+					<li>Balcao Nosso Banco BMI, Nampula 2016</li> 
+					<li>Balcao Nosso Banco BMI, Pemba 2016</li>
+					<li>Balcao BCI Pemba 2015</li>
+					<li>Escritorios Impar Milenium BIM Agencia Impar, Pemba, 2015</li>
+					<li>Escritorios TLC Pemba 2014</li>
+					<li>Escritorios PLM Pemba 2014</li>
+					<li>Escritorios Maringanha Caritas Diocesana de Pemba, Pemba 2014</li>
+					<h6>industrial</h6>
+					<li>Carpintaria Kingman Diocese de Pemba, Pemba 2014</li>
+					<h6>ensino</h6>
+					<li>UCM Universidade Católica Moçambique, Mocimboa da Praia 2016</li>
+					<li>Colégio Don Bosco, adaptação de salas escolares, Pemba 2015</li>
+					<h6>residencial</h6>
+					<li>Apartamento Bombeiros Diocese de Pemba, Pemba 2016</li> 
+					<li>Casa Colonial particular, Ilha do Ibo 2016</li>
+					<li>Consolidaçao Edificio Mahate Diocese de Pemba, Pemba 2015</li>
+					<li>Cobertura Casa Carlos Lwanga Diocese de Pemba, Pemba 2014</li>
+					<li>Residencia Balama Irmas Combonianas de Balama, Balama 2014</li>
+					<li>Moradia Rua 12 Diocese de Pemba, Pemba 2014</li>
+					<li>Residencia Universitaria Universidade Católica Moçambique, Pemba 2014</li>
+					<li>Moradia em Wimbie particular, Pemba 2014</li>
+					<h6>religiosa</h6>
+					<li>Seminário Diocese de Pemba, Montepuez 2016</li>
+					<li>Paço Episcopal Diocese de Pemba, Pemba 2013/2014/2015</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 	<footer class="clearfix">
 		<nav>
