--- a/unit_9/4/projectos.html
+++ b/unit_9/4/projectos.html
@@ -14,10 +14,10 @@
 		</div>
 		<div>
 			<nav>
-				<a href="index.html">inicio</a>
-				<a href="#">Sobre nós</a>
-				<a href="#">experiência</a>
-				<a href="#">Contactos</a>
+				<a href="index.html">início</a>
+				<a href="sobre.html">Sobre nós</a>
+				<a class="active" href="#">o nosso trabalho</a>
+				<a href="experiencia.html">experiência</a>
 			</nav>
 		</div>
 	</header>
