--- a/mycha_mob/contact.html
+++ b/mycha_mob/contact.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MyCha infusões • herbal infusions</title>
 	<link href="https://fonts.googleapis.com/css?family=Asap|Cardo:400,700" rel="stylesheet"> 
-	<!-- <link href="boilerplate.css" rel="stylesheet" type="text/css"> -->
+	<link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Montserrat:200" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 	<meta name="description" content="Infusões de plantas, herbal infusions, herbal tea">
