mocha nav add pg

--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -32,13 +32,13 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<!-- <a href="#infusoes">infusões</a> -->
-					<a href="#">about</a>
+					<a href="./infusions.html">infusions</a>
+					<a href="./about.html">about</a>
 					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
 					<!-- <a href="#receitas">receitas</a> -->
-					<a href="buy.html">products</a>
+					<a href="./buy.html">buy</a>
 					<!-- <a href="#press">press</a> -->
-					<a href="contact.html">contact</a>
+					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
 					<img src="images/facebook-outline1.png" alt="facebook">
@@ -73,7 +73,7 @@
 				  <img class="photo" src="images/laetitia_L.jpg" /> 
 				  <div class="body-copy">
 					  <h2>My Cha's creator</h2>
-					  <br />
+					  <!-- <br /> -->
 					  <p class="descricao cha_detail">
 						  <span class="bold_name">Laetitia Arrighi de Casanova</span> is the soul of <span class="myCha">My Cha</span>.</p><br />
 						  <p class="descricao cha_detail">She lives and works in Lisbon and maintains strong ties to Paris.</p>
