--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -33,13 +33,13 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<!-- <a href="#infusoes">infusões</a> -->
-					<a href="about.html">about</a>
+					<a href="./infusions.html">infusões</a>
+					<a href="./about.html">about</a>
 					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
 					<!-- <a href="#receitas">receitas</a> -->
-					<a href="buy.html">products</a>
+					<a href="./buy.html">buy</a>
 					<!-- <a href="#press">press</a> -->
-					<a href="contact.html">contact</a>
+					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
 					<img src="images/facebook-outline1.png" alt="facebook">
