--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -33,7 +33,7 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<a href="./infusions.html">infusões</a>
+					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
 					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
 					<!-- <a href="#receitas">receitas</a> -->
@@ -47,7 +47,8 @@
 			</section>  
 		</header>
 		<main>
-			<h1>Infusões com alma</h1>
+			<!-- <h1>Infusões com alma</h1> -->
+			<h1>natural herbal teas for body and soul</h1>
 			<!-- <section class="section_menu clearfix">
 			        <a href="#infusoes">
 						<img src="images2/book_cvr.jpg" alt="">
