--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -35,10 +35,10 @@
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
-					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
-					<!-- <a href="#receitas">receitas</a> -->
+					<a href="#sinto-me">hoje sinto-me</a>
+					<a href="#receitas">receitas</a>
 					<a href="./buy.html">buy</a>
-					<!-- <a href="#press">press</a> -->
+					<a href="#press">press</a>
 					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
@@ -47,8 +47,8 @@
 			</section>  
 		</header>
 		<main>
-			<!-- <h1>Infusões com alma</h1> -->
 			<h1>natural herbal teas for body and soul</h1>
+
 			<!-- <section class="section_menu clearfix">
 			        <a href="#infusoes">
 						<img src="images2/book_cvr.jpg" alt="">
