--- a/mycha_mob/buy.html
+++ b/mycha_mob/buy.html
@@ -47,6 +47,19 @@
 		</header>
 		<main>
 			<h2>shop my cha!</h2>
+			<section class="tea_family">
+			        <a href="#"><img class="photo1" src="./images2/pillows_cvr.jpg" alt="">
+						<span class="label">calming</span></a>
+					<a href="#"><img class="photo1" src="./images2/tonics_cvr.jpg" alt=""><span class="label">tonics</span></a>
+					<a href="#">
+						<img class="photo1" src="./images2/little_extras_cvr.jpg" alt="">
+						<span class="label">little extras</span>
+					</a>
+					<a href="#">
+						<img class="photo1" src="./images2/flowers2.jpg" alt="">
+						<span class="label">beauty</span>
+					</a>
+		    </section>
 			<section id="tea_detail">
 				  <!-- Calming> -->
 					  <div class="C" id="calmeChaud">
