--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -33,10 +33,10 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
-					<a href="#sinto-me">hoje sinto-me</a>
-					<a href="#receitas">receitas</a>
+					<!-- <a href="./infusions.html">infusions</a> -->
+					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
+					<a href="#receitas">recipes</a>
 					<a href="./buy.html">buy</a>
 					<a href="#press">press</a>
 					<a href="./contact.html">contact</a>
