--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -32,12 +32,11 @@
 				</a>
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
-					<a href="./infusions.html">infusions</a>
+					<a href="./index.html">home</a>
 					<a href="./about.html">about</a>
-					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
-					<!-- <a href="#receitas">receitas</a> -->
+					<a href="#receitas">receitas</a>
 					<a href="./buy.html">buy</a>
-					<!-- <a href="#press">press</a> -->
+					<a href="#press">press</a>
 					<a href="./contact.html">contact</a>
 				</nav>
 				<a id="fb" href="https://www.facebook.com/mychaface">
@@ -72,18 +71,18 @@
 			  <section id="perfil" class="green_bg">
 				  <img class="photo" src="images/laetitia_L.jpg" /> 
 				  <div class="body-copy">
-					  <h2>My Cha's creator</h2>
-					  <!-- <br /> -->
+					  <h3>My Cha's creator</h3>
+					  <br />
 					  <p class="descricao cha_detail">
 						  <span class="bold_name">Laetitia Arrighi de Casanova</span> is the soul of <span class="myCha">My Cha</span>.</p><br />
 						  <p class="descricao cha_detail">She lives and works in Lisbon and maintains strong ties to Paris.</p>
-						  <p class="descricao cha_detail">Fascinated by plants in all their forms, she combines consulting with creating <span class="myCha">My Cha</span> herbal teas. She doesn't miss an opportunity to travel around the world to inspiring and exotic locations and brings newly found influences to <span class="myCha">My Cha</span>'s unique herb blends.
+						  <p class="descricao cha_detail">Fascinated by plants in all their forms, she combines consulting with creating <span class="myCha">My&nbsp; Cha</span> herbal teas. She doesn't miss an opportunity to travel around the world to inspiring and exotic locations and brings newly found influences to <span class="myCha">My Cha</span>'s unique herb blends.
 					  </p>
 				  </div>
 			  </section>
 		    <!-- </div> -->
 		    <section id="terms">
-			  <h4>Terms & Conditions</h4>
+			  <h3>Terms & Conditions</h3>
 			  <p>Read General Terms & Conditions of Sale<br />
 				Payments<br />
 				Returns Policy<br />
