--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -33,8 +33,7 @@
 				<nav>
 					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./index.html">home</a>
-					<a href="./about.html">about</a>
-					<a href="#receitas">receitas</a>
+					<a href="#receitas">recipes</a>
 					<a href="./buy.html">buy</a>
 					<a href="#press">press</a>
 					<a href="./contact.html">contact</a>
