--- a/broadway/index.html
+++ b/broadway/index.html
@@ -3,41 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <style href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Broadway Design</h1>
-      <nav>
-      <ul>
-      <li>Home</li>
-      <li>Process</li>
-      <li>Work</li>
-      <li>Team</li>
-      <li>Contact</li>
-      </ul>
+      <nav id="menu">
+        <ul>
+          <li><a id="home" href="#">Home</a></li>
+          <li><a id="process" href="#">Process</a></li>
+          <li><a id="work" href="#">Work</a></li>
+          <li><a id="team" href="#">Team</a></li>
+          <li><a id="contact" href="#">Contact</a></li>
+        </ul>
       </nav>
     </header>
     <main>
       <h2>Our Process</h2>
-      <img src="resources/images/identify.svg">
-      <h3>Identify</h3>
-      <p></p>
-      <img src="resources/images/understand.svg"
-      <h3>Understand</h3>
-      <p></p>
-      <img src="resources/images/execute.svg">
-      <h3>Execute</h3>
-      <p></p>
-      <p class="designed-in"></p>
-      <h3>Portfolio</h3>
-      <p></p>
-      <h3>Team</h3>
-      <p></p>
-      <h3>Contact</h3>
-      <p></p>
+      <div>
+        <img src="resources/images/identify.svg">
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      </div>
+      <div>
+        <img src="resources/images/understand.svg">
+        <h3>Understand</h3>
+        <p>we focus on our projects inside and out.</p>
+      </div>
+      <div>
+        <img src="resources/images/execute.svg">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+      </div>
+      <!-- <div> -->
+        <p class="designed-in">Designed in New York</p>
+      <!-- </div> -->
+        <h3>Portfolio</h3>
+        <p>Coming soon</p>
+        <h3>Team</h3>
+        <p>we're hiring</p>
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>Email: test@example.com</p>
+        <p>Twitter: @test</p>
     </main>
     <footer>
+      <p>© Broadway 2016 <a id="home" href="#">Home</a> <a id="process" href="#">Process</a> <a id="work" href="#">Work</a> <a id="team" href="#">Team</a> <a id="contact" href="#">Contact</a></p>
     </footer>
 
   </body>
