--- a/excursion/index.html
+++ b/excursion/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link type="text/css" rel="stylesheet" href="./resources/css/style.css"
+    <link type="text/css" rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
     <h1>Discover hidenn places in the world around you</h1>
