--- a/ColmarAcademy/index.html
+++ b/ColmarAcademy/index.html
@@ -43,21 +43,27 @@
 			<div id="callout_column">
 				<div class="horz_callout">
 					<img src="./resources/images/information-orientation.jpg" alt="on campus 1" />
-					<h4>Orientation date</h4>
-					<p>Tues 10/11 & Wed 10/12, 8am—3pm</p>
-					<span class="read_more">Read more</span>
+					<div>
+						<h4>Orientation date</h4>
+						<p>Tues 10/11 & Wed 10/12, 8am—3pm</p>
+						<span class="read_more">Read more</span>
+					</div>
 				</div>
 				<div class="horz_callout">
 					<img src="./resources/images/information-campus.jpg" alt="on campus 2" />
-					<h4>Our campus</h4>
-					<p>Find which campus is close by you</p>
-					<span class="read_more">Read more</span>
+					<div>
+						<h4>Our campus</h4>
+						<p>Find which campus is close by you</p>
+						<span class="read_more">Read more</span>
+					</div>
 				</div>
 				<div class="horz_callout">
 					<img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Slack" />
-					<h4>Our guest lecture</h4>
-					<p>Join a keynote with Oliver Slack about music in medical treatment</p>
-					<span class="read_more">Read more</span>
+					<div>
+						<h4>Our guest lecture</h4>
+						<p>Join a keynote with Oliver Slack about music in medical treatment</p>
+						<span class="read_more">Read more</span>
+					</div>
 				</div>
 			</div>
 		</section>
