continue with media queries

--- a/ColmarAcademy/index.html
+++ b/ColmarAcademy/index.html
@@ -22,6 +22,14 @@
 					<li>Sign in</li>
 				</ul>
 			</nav>
+			<nav class="mobile-nav">
+				<ul>
+					<li><img src="./resources/images/ic-on-campus.svg" alt="on campus icon" /></li>
+					<li><img src="./resources/images/ic-online.svg" alt="online icon" /></li>
+					<li><img src="./resources/images/ic-login.svg" alt="login icon" /></li>
+					<li></li>
+				</ul>
+			</nav>
 		</div>
 		<div class="banner">
 			<div class="left">
