--- a/ColmarAcademy/index.html
+++ b/ColmarAcademy/index.html
@@ -4,7 +4,7 @@
 	<title>Colmar Academy</title>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,800" rel="stylesheet"> 
-	<link rel="icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
 	<link type="text/css" href="./resources/css/style.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -23,9 +23,9 @@
 					<li>Sign in</li>
 				</ul>
 				<ul class="mobile-nav">
-					<li><img src="./resources/images/ic-on-campus.svg" alt="on campus icon" /></li>
-					<li><img src="./resources/images/ic-online.svg" alt="online icon" /></li>
-					<li><img src="./resources/images/ic-login.svg" alt="login icon" /></li>
+					<li><a href="#"><img src="./resources/images/ic-on-campus.svg" alt="on campus icon" /></a></li>
+					<li><a href="#"><img src="./resources/images/ic-online.svg" alt="online icon" /></a></li>
+					<li><a href="#"><img src="./resources/images/ic-login.svg" alt="login icon" /></a></li>
 					<li></li>
 				</ul>
 			</nav>
